[JSC] Enhance error message for for-of loops without Symbol.iterator https://bugs.webkit.org/show_bug.cgi?id=157041 rdar://problem/159814766

Reviewed by NOBODY (OOPS!).

This adds a check to verify that Symbol.iterator property is callable
before attempting to use it. If it's not callable (undefined, null, or not a function),
we now throw a clearer TypeError message. This avoids adding error checks at the
bytecode generation stage and instead handles errors at runtime.

* JSTests/stress/iterator-error-messages-consistent.js:
(runTest):
* Source/JavaScriptCore/runtime/CommonSlowPaths.cpp:
(JSC::iteratorOpenTryFastImpl):
* Source/JavaScriptCore/runtime/IteratorOperations.cpp:
(JSC::validateIterable):
(JSC::throwIteratorError):
* Source/JavaScriptCore/runtime/IteratorOperations.h:
(JSC::forEachInIterable):
* JSTests/stress/iterator-error-messages-consistent.js: Added.
(shouldBe):
(shouldThrow):
(iterate):
(runTest):
(test):
(testFromEntries):
(testDestructuring):
(testSpread):
* JSTests/stress/object-from-entries.js:
(): Deleted.
* LayoutTests/inspector/unit-tests/array-utilities-expected.txt:
* LayoutTests/inspector/unit-tests/set-utilities-expected.txt:
* LayoutTests/js/let-syntax-expected.txt:
* Source/JavaScriptCore/runtime/CommonSlowPaths.cpp:
(JSC::iteratorOpenTryFastImpl):
* Source/JavaScriptCore/runtime/IteratorOperations.cpp:
(JSC::validateIterable):
(JSC::throwIteratorError):
* Source/JavaScriptCore/runtime/IteratorOperations.h:
(JSC::forEachInIterable):